--- a/uiCode/src/app/comp/cash/cash.component.html
+++ b/uiCode/src/app/comp/cash/cash.component.html
@@ -1,3 +1,13 @@
-<p>
-  cash works!
-</p>
+<span class="simple-text">
+ Add cash
+</span>
+
+<div style="padding-left: 30%;padding-top: 10%;">
+  <button id="multi-button" 
+   type="button" 
+  class="md-button md-primary md-raised ng-binding ng-isolate-scope progress-button md-ink-ripple" 
+  (click)="signIN()" data-loading="Working..."
+    style="background-color:  rgb(3,155,229) ; box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);  width: 40%; height: 30px;">
+    Add Cash
+  <span class="tz-bar background-horizontal"></span></button>
+  </div>
