--- a/uiCode/src/app/comp/footer/footer.component.html
+++ b/uiCode/src/app/comp/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="fixedfooter">
 <div class="app-footer">
-  <div class="navbar-header navbar-header-white">
-   footer
+  <div class="navbar-header navbar-header-white" style=" font-weight: 900;">
+   
   </div>
   </div>
 </div>
