--- a/uiCode/src/app/comp/home/home.component.html
+++ b/uiCode/src/app/comp/home/home.component.html
@@ -24,5 +24,5 @@
                 </div>
         </div>
 </div>
-
+<p-toast position="top-left"></p-toast>
 <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
